--- a/AboutMe.html
+++ b/AboutMe.html
@@ -3,7 +3,7 @@
 <head>
 <title> About Myself </title>
 <body>
-<p> I am sibi I am studying M.sc (data science) in  south indian oxford (periyar university) salem </p>
+<p> I am sibi I am studying M.sc (data science) in  periyar university, salem </p>
 </body>
 </head>
 </html>
